<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <EditText
        android:id="@+id/task_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/dosis_bold"
        android:hint="@string/new_dialog_hint"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/today_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/today_sel" />

        <ImageView
            android:id="@+id/tomorrow_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/tomorrow" />

        <ImageView
            android:id="@+id/overmorrow_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/overmorrow" />

        <ImageView
            android:id="@+id/complete_view"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/today_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/today_caption"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tomorrow_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis"
            android:text="@string/tomorrow_caption"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/overmorrow_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis"
            android:text="@string/overmorrow_caption"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/complete_text"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis"
            android:text="@string/complete_caption"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>